src/objects/Unit_Product_Type_Field__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COU_API_Name__c</fullName>
        <label>COU API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General &amp; Identification</fullName>
                </value>
                <value>
                    <fullName>Weights &amp; Dimensions</fullName>
                </value>
                <value>
                    <fullName>Power &amp; Wheels</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Other specs</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_In_Deal_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Deal Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_In_SO_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In SO Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_In_Unit_Order_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Unit Order Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Product_Type__c</fullName>
        <label>Unit Product Type</label>
        <referenceTo>Unit_Product_Type__c</referenceTo>
        <relationshipLabel>Unit Product Type Fields</relationshipLabel>
        <relationshipName>Unit_Product_Type_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Unit Product Type Field</label>
    <nameField>
        <label>Unit Product Type Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Product Type Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>